[gd_scene load_steps=6 format=3 uid="uid://etvdjxm6awtl"]

[ext_resource type="Script" uid="uid://djg2242sqprmx" path="res://components/NetworkSettings/NetworkSettings.gd" id="1_2l14x"]
[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_7vja5"]
[ext_resource type="Texture2D" uid="uid://cjrfhst4b2jgg" path="res://assets/icons/Refresh.svg" id="2_27sfe"]
[ext_resource type="StyleBox" uid="uid://drpfuhk8y61xk" path="res://assets/styles/SolidPanelPopup.tres" id="2_ki046"]
[ext_resource type="Texture2D" uid="uid://c4tfiyg157aia" path="res://assets/icons/NetworkInterface.svg" id="3_x38xp"]

[node name="NetworkSettings" type="PanelContainer" node_paths=PackedStringArray("tree", "confirm_button", "netmask_length_spinbox", "device_id_spinbox")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -893.0
offset_bottom = -343.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7vja5")
theme_override_styles/panel = ExtResource("2_ki046")
script = ExtResource("1_2l14x")
tree = NodePath("VBoxContainer/Tree")
confirm_button = NodePath("VBoxContainer/PanelContainer/HBoxContainer/Confirm")
netmask_length_spinbox = NodePath("VBoxContainer/PanelContainer3/VBoxContainer/NetMaskLength")
device_id_spinbox = NodePath("VBoxContainer/PanelContainer3/VBoxContainer/DeviceID")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
text = "Select an Interface:"
icon = ExtResource("3_x38xp")
flat = true

[node name="Tree" type="Tree" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
hide_folding = true
hide_root = true

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="NetMaskLength" type="SpinBox" parent="VBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
max_value = 32.0
value = 24.0
prefix = "Prefix:"

[node name="DeviceID" type="SpinBox" parent="VBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
max_value = 65535.0
value = 12345.0
prefix = "DeviceID"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Confirm" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Confirm"

[node name="Reload" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_27sfe")

[connection signal="item_selected" from="VBoxContainer/Tree" to="." method="_on_tree_item_selected"]
[connection signal="nothing_selected" from="VBoxContainer/Tree" to="." method="_on_tree_nothing_selected"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Reload" to="." method="reload"]
